--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,120 @@
+@article{Shapiro1999,
+abstract = {The postcollapse structure of objects which form by gravitational condensation out of the expanding cosmological background universe is a key element in the theory of galaxy formation. Towards this end, we have reconsidered the outcome of the nonlinear growth of a uniform, spherical density perturbation in an unperturbed background universe - the cosmological ``top-hat'' problem. We adopt the usual assumption that the collapse to infinite density at a finite time predicted by the top-hat solution is interrupted by a rapid virialization caused by the growth of small-scale inhomogeneities in the initial perturbation. We replace the standard description of the postcollapse object as a uniform sphere in virial equilibrium by a more self-consistent one as a truncated, nonsingular, isothermal sphere in virial and hydrostatic equilibrium, including for the first time a proper treatment of the finite-pressure boundary condition on the sphere. The results differ significantly from both the uniform sphere and the singular isothermal sphere approximations for the postcollapse objects. These results will have a significant effect on a wide range of applications of the Press-Schechter and other semi-analytical models to cosmology. The truncated isothermal sphere solution presented here predicts the virial temperature and integrated mass distribution of the X-ray clusters formed in the CDM model as found by detailed, 3D, numerical gas and N-body dynamical simulations remarkably well. This solution allows us to derive analytically the numerically-calibrated mass-temperature and radius-temperature scaling laws for X-ray clusters which were derived empirically by Evrard, Metzler and Navarro from simulation results for the CDM model. (Shortened)},
+archivePrefix = {arXiv},
+arxivId = {astro-ph/9810164},
+author = {Shapiro, Paul R. and Iliev, Ilian T. and Raga, Alejandro C.},
+doi = {10.1046/j.1365-8711.1999.02609.x},
+eprint = {9810164},
+file = {:C$\backslash$:/Users/Ian/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/b67aa1ba5e1311fcc8d54dbcbafb2ca31f1a2199.pdf:pdf},
+issn = {0035-8711},
+keywords = {clusters,cosmology,dark matter,formation,galaxies,general,haloes,kinematics and dynamics,theory},
+number = {December},
+pages = {29},
+primaryClass = {astro-ph},
+title = {{A model for the postcollapse equilibrium of cosmological structure: truncated isothermal spheres from top-hat density perturbations}},
+url = {http://arxiv.org/abs/astro-ph/9810164},
+volume = {224},
+year = {1998}
+}
+@article{Chen2005,
+author = {Chen, Da-ming},
+doi = {10.1086/431577},
+file = {:C$\backslash$:/Users/Ian/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/4d63a53562522a0dd6969aab8a16cd587ef6b017.pdf:pdf},
+issn = {0004-637X},
+journal = {ApJ},
+month = {aug},
+number = {1},
+pages = {23--28},
+title = {{Nonsingular Density Profiles of Dark Matter Halos and Strong Gravitational Lensing}},
+url = {http://iopscience.iop.org/article/10.1086/431577/pdf http://stacks.iop.org/0004-637X/629/i=1/a=23},
+volume = {629},
+year = {2005}
+}
+@article{Narayan1996,
+abstract = {These lectures give an introduction to Gravitational Lensing. We discuss lensing by point masses, lensing by galaxies, and lensing by clusters and larger-scale structures in the Universe. The relevant theory is developed and applications to astrophysical problems are discussed.},
+archivePrefix = {arXiv},
+arxivId = {astro-ph/9606001},
+author = {Narayan, Ramesh and Bartelmann, Matthias},
+eprint = {9606001},
+file = {:C$\backslash$:/Users/Ian/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/a75d562f796bdbd5a4c53c5e9827e5ad64a105f4.pdf:pdf},
+primaryClass = {astro-ph},
+title = {{Lectures on Gravitational Lensing}},
+url = {http://arxiv.org/abs/astro-ph/9606001},
+year = {1996}
+}
+@article{Jimenez2003,
+abstract = {We study a large set of high spatial resolution optical rotation curves of galaxies with the goal of determining the model parameters for a disk embedded within a CDM halo that we model either with a NFW profile or pseudo-isothermal profile. We show that parameter degeneracies present in lower resolution data are lifted at these higher resolutions. 34{\%} of the galaxies do not have a meaningful fit when using the NFW profile and 32{\%} when using the pseudoisothermal profile, however only 14{\%} do not have a meaningful fit in either model. In both models we find correlations between the disk baryon fraction {\$}f{\_}d{\$} and the spin parameter of the halo {\$}\backslashlambda'{\$}, between {\$}f{\_}d{\$} and the dark halo mass {\$}M{\_}{\{}200{\}}{\$}, and between {\$}M{\_}{\{}200{\}}{\$} and the concentration parameter {\$}c{\$}. We show that the distribution of the concentration parameters {\$}c{\$}, for a NFW halo, is in good agreement with CDM predictions; no significant galaxy population is found with very low values of {\$}c{\$}. The overall distribution of {\$}\backslashlambda'{\$} is in good agreement with theoretical predictions from hierarchical tidal torque theory. The whole sample is also well fitted by a pseudo-isothermal dark halo with a core, but the size of the core is rather small (for 70{\%} of the sample the core size is less than 2 kpc). Thus we conclude that the profile of dark matter is steep ({\$}r{\^{}}{\{}-1{\}}{\$} or steeper) down to this radius; large dark matter cores (and therefore very low dark matter central densities) seem to be excluded. LSBs tend to have higher values of {\$}\backslashlambda'{\$} for a given {\$}f{\_}d{\$} and lower values of {\$}c{\$} for a given mass than HSBs. In an appendix we give some useful formula for pseudo-isothermal profile halos and discuss in detail the issue of parameter degeneracies.},
+archivePrefix = {arXiv},
+arxivId = {astro-ph/0201352},
+author = {Jimenez, Raul and Verde, Licia and Oh, S. Peng},
+doi = {10.1046/j.1365-8711.2003.06165.x},
+eprint = {0201352},
+file = {:C$\backslash$:/Users/Ian/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/2cc7be403c5307f7ad23e7e385cc12fdb5318002.pdf:pdf},
+issn = {0035-8711},
+journal = {Mon. Not. R. Astron. Soc.},
+keywords = {Cosmology: Theory,Galaxies: Formation,Galaxies: Kinematics and dynamics,Galaxies: Spiral},
+month = {feb},
+number = {1},
+pages = {243--259},
+primaryClass = {astro-ph},
+title = {{Dark halo properties from rotation curves}},
+url = {https://arxiv.org/pdf/astro-ph/0201352.pdf https://academic.oup.com/mnras/article-lookup/doi/10.1046/j.1365-8711.2003.06165.x},
+volume = {339},
+year = {2003}
+}
+@article{Dodelson2004,
+author = {Dodelson, Scott},
+doi = {10.1103/PhysRevD.70.023008},
+issn = {1550-7998},
+journal = {Phys. Rev. D},
+month = {jul},
+number = {2},
+pages = {023008},
+publisher = {American Physical Society},
+title = {{Cluster masses: Accounting for structure along the line of sight}},
+url = {https://link.aps.org/doi/10.1103/PhysRevD.70.023008},
+volume = {70},
+year = {2004}
+}
+@article{Niemi2015,
+abstract = {One of the most powerful techniques to study the dark sector of the Universe is weak gravitational lensing. In practice, to infer the reduced shear, weak lensing measures galaxy shapes, which are the consequence of both the intrinsic ellipticity of the sources and of the integrated gravitational lensing effect along the line of sight. Hence, a very large number of galaxies is required in order to average over their individual properties and to isolate the weak lensing cosmic shear signal. If this `shape noise' can be reduced, significant advances in the power of a weak lensing surveys can be expected. This paper describes a general method for extracting the probability distributions of parameters from catalogues of data using Voronoi cells, which has several applications, and has synergies with Bayesian hierarchical modelling approaches. This allows us to construct a probability distribution for the variance of the intrinsic ellipticity as a function of galaxy property using only photometric data, allowing a reduction of shape noise. As a proof of concept the method is applied to the CFHTLenS survey data. We use this approach to investigate trends of galaxy properties in the data and apply this to the case of weak lensing power spectra.},
+archivePrefix = {arXiv},
+arxivId = {1509.05058},
+author = {Niemi, Sami-Matias and Kitching, Thomas D. and Cropper, Mark},
+doi = {10.1093/mnras/stv2059},
+eprint = {1509.05058},
+file = {:C$\backslash$:/Users/Ian/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/8f8d0b2ca4431f0260730bc9e03f863fb3fdc2de.pdf:pdf},
+issn = {0035-8711},
+journal = {Mon. Not. R. Astron. Soc.},
+keywords = {cosmology,large,scale structure of universe,theory},
+month = {dec},
+number = {2},
+pages = {1221--1230},
+title = {{On weak lensing shape noise}},
+url = {http://arxiv.org/abs/1509.05058{\%}0Ahttp://dx.doi.org/10.1093/mnras/stv2059 https://academic.oup.com/mnras/article-lookup/doi/10.1093/mnras/stv2059},
+volume = {454},
+year = {2015}
+}
+@article{Oguri2011,
+abstract = {Using a large set of ray-tracing in N-body simulations, we examine lensing profiles around massive dark haloes in detail, with a particular emphasis on the profile at around the virial radii. We compare radial convergence profiles, which are measured accurately in the ray-tracing simulations by stacking many dark haloes, with our simple analytic model predictions. Our analytic models consist of a main halo, which is modelled by the Navarro-Frenk-White (NFW) density profile with three different forms of the truncation, plus the correlated matter (2-halo term) around the main halo. We find that the smoothly truncated NFW profile best reproduces the simulated lensing profiles, out to more than 10 times the virial radius. We then use this analytic model to investigate potential biases in cluster weak lensing studies in which a single, untruncated NFW component is usually assumed in interpreting observed signals. We find that cluster masses, inferred by fitting reduced tangential shear profiles with the NFW profile, tend to be underestimated by {\~{}}5-10{\%} if fitting is performed out to {\~{}}10'-30'. In contrast, the concentration parameter is overestimated typically by {\~{}}20{\%} for the same fitting range. We also investigate biases in computing the signal-to-noise ratio of weak lensing mass peaks, finding them to be {\textless}4{\%} for significant mass peaks. In the Appendices, we provide useful formulae for the smoothly truncated NFW profile.},
+archivePrefix = {arXiv},
+arxivId = {1101.0650},
+author = {Oguri, Masamune and Hamana, Takashi},
+doi = {10.1111/j.1365-2966.2011.18481.x},
+eprint = {1101.0650},
+file = {:C$\backslash$:/Users/Ian/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/6ac0a30146f10724014ea3f871c8b45e9f5b924a.pdf:pdf},
+isbn = {doi:10.1111/j.1365-2966.2011.18481.x},
+issn = {00358711},
+journal = {Mon. Not. R. Astron. Soc.},
+keywords = {Cosmology: theory,Dark matter,Galaxies: clusters: general,Gravitational lensing: weak},
+month = {jul},
+number = {3},
+pages = {1851--1861},
+title = {{Detailed cluster lensing profiles at large radii and the impact on cluster weak lensing studies}},
+url = {https://arxiv.org/pdf/1101.0650.pdf https://academic.oup.com/mnras/article-lookup/doi/10.1111/j.1365-2966.2011.18481.x},
+volume = {414},
+year = {2011}
+}
 @article{Chang2013,
 abstract = {Future weak lensing surveys potentially hold the highest statistical power for constraining cosmological parameters compared to other cosmological probes. The statistical power of a weak lensing survey is determined by the sky coverage, the inverse of the noise in shear measurements, and the galaxy number density. The combination of the latter two factors is often expressed in terms of {\$}n{\_}{\{}\backslashrm eff{\}}{\$} -- the "effective number density of galaxies used for weak lensing measurements". In this work, we estimate {\$}n{\_}{\{}\backslashrm eff{\}}{\$} for the Large Synoptic Survey Telescope (LSST) project, the most powerful ground-based lensing survey planned for the next two decades. We investigate how the following factors affect the resulting {\$}n{\_}{\{}\backslashrm eff{\}}{\$} of the survey with detailed simulations: (1) survey time, (2) shear measurement algorithm, (3) algorithm for combining multiple exposures, (4) inclusion of data from multiple filter bands, (5) redshift distribution of the galaxies, and (6) masking and blending. For the first time, we quantify in a general weak lensing analysis pipeline the sensitivity of {\$}n{\_}{\{}\backslashrm eff{\}}{\$} to the above factors. We find that with current weak lensing algorithms, expected distributions of observing parameters, and all lensing data ({\$}r{\$}- and {\$}i{\$}-band, covering 18,000 degree{\$}{\^{}}{\{}2{\}}{\$} of sky) for LSST, {\$}n{\_}{\{}\backslashrm eff{\}} \backslashapprox37{\$} arcmin{\$}{\^{}}{\{}-2{\}}{\$} before considering blending and masking, {\$}n{\_}{\{}\backslashrm eff{\}} \backslashapprox31{\$} arcmin{\$}{\^{}}{\{}-2{\}}{\$} when rejecting seriously blended galaxies and {\$}n{\_}{\{}\backslashrm eff{\}} \backslashapprox26{\$} arcmin{\$}{\^{}}{\{}-2{\}}{\$} when considering an additional 15{\%} loss of galaxies due to masking. With future improvements in weak lensing algorithms, these values could be expected to increase by up to 20{\%}. Throughout the paper, we also stress the ways in which {\$}n{\_}{\{}\backslashrm eff{\}}{\$} depends on our ability to understand and control systematic effects in the measurements.},
 archivePrefix = {arXiv},
@@ -77,6 +194,25 @@ month = {jun},
 publisher = {Cambridge University Press},
 title = {{Gravitational Lensing}},
 year = {2017}
+}
+@article{PlanckCollaboration2015,
+abstract = {We present results based on full-mission Planck observations of temperature and polarization anisotropies of the CMB. These data are consistent with the six-parameter inflationary LCDM cosmology. From the Planck temperature and lensing data, for this cosmology we find a Hubble constant, H0= (67.8 +/- 0.9) km/s/Mpc, a matter density parameter Omega{\_}m = 0.308 +/- 0.012 and a scalar spectral index with n{\_}s = 0.968 +/- 0.006. (We quote 68{\%} errors on measured parameters and 95{\%} limits on other parameters.) Combined with Planck temperature and lensing data, Planck LFI polarization measurements lead to a reionization optical depth of tau = 0.066 +/- 0.016. Combining Planck with other astrophysical data we find N{\_} eff = 3.15 +/- 0.23 for the effective number of relativistic degrees of freedom and the sum of neutrino masses is constrained to {\textless} 0.23 eV. Spatial curvature is found to be |Omega{\_}K| {\textless} 0.005. For LCDM we find a limit on the tensor-to-scalar ratio of r {\textless}0.11 consistent with the B-mode constraints from an analysis of BICEP2, Keck Array, and Planck (BKP) data. Adding the BKP data leads to a tighter constraint of r {\textless} 0.09. We find no evidence for isocurvature perturbations or cosmic defects. The equation of state of dark energy is constrained to w = -1.006 +/- 0.045. Standard big bang nucleosynthesis predictions for the Planck LCDM cosmology are in excellent agreement with observations. We investigate annihilating dark matter and deviations from standard recombination, finding no evidence for new physics. The Planck results for base LCDM are in agreement with BAO data and with the JLA SNe sample. However the amplitude of the fluctuations is found to be higher than inferred from rich cluster counts and weak gravitational lensing. Apart from these tensions, the base LCDM cosmology provides an excellent description of the Planck CMB observations and many other astrophysical data sets.},
+archivePrefix = {arXiv},
+arxivId = {1502.01589},
+author = {{Planck Collaboration} and Ade, P. A. R. and Aghanim, N. and Arnaud, M. and Ashdown, M. and Aumont, J. and Baccigalupi, C. and Banday, A. J. and Barreiro, R. B. and Bartlett, J. G. and Bartolo, N. and Battaner, E. and Battye, R. and Benabed, K. and Benoit, A. and Benoit-Levy, A. and Bernard, J. -P. and Bersanelli, M. and Bielewicz, P. and Bock, J. J. and Bonaldi, A. and Bonavera, L. and Bond, J. R. and Borrill, J. and Bouchet, F. R. and Boulanger, F. and Bucher, M. and Burigana, C. and Butler, R. C. and Calabrese, E. and Cardoso, J. -F. and Catalano, A. and Challinor, A. and Chamballu, A. and Chary, R. -R. and Chiang, H. C. and Chluba, J. and Christensen, P. R. and Church, S. and Clements, D. L. and Colombi, S. and Colombo, L. P. L. and Combet, C. and Coulais, A. and Crill, B. P. and Curto, A. and Cuttaia, F. and Danese, L. and Davies, R. D. and Davis, R. J. and de Bernardis, P. and de Rosa, A. and de Zotti, G. and Delabrouille, J. and Desert, F. -X. and {Di Valentino}, E. and Dickinson, C. and Diego, J. M. and Dolag, K. and Dole, H. and Donzelli, S. and Dore, O. and Douspis, M. and Ducout, A. and Dunkley, J. and Dupac, X. and Efstathiou, G. and Elsner, F. and Ensslin, T. A. and Eriksen, H. K. and Farhang, M. and Fergusson, J. and Finelli, F. and Forni, O. and Frailis, M. and Fraisse, A. A. and Franceschi, E. and Frejsel, A. and Galeotta, S. and Galli, S. and Ganga, K. and Gauthier, C. and Gerbino, M. and Ghosh, T. and Giard, M. and Giraud-Heraud, Y. and Giusarma, E. and Gjerlow, E. and Gonzalez-Nuevo, J. and Gorski, K. M. and Gratton, S. and Gregorio, A. and Gruppuso, A. and Gudmundsson, J. E. and Hamann, J. and Hansen, F. K. and Hanson, D. and Harrison, D. L. and Helou, G. and Henrot-Versille, S. and Hernandez-Monteagudo, C. and Herranz, D. and Hildebrandt, S. R. and Hivon, E. and Hobson, M. and Holmes, W. A. and Hornstrup, A. and Hovest, W. and Huang, Z. and Huffenberger, K. M. and Hurier, G. and Jaffe, A. H. and Jaffe, T. R. and Jones, W. C. and Juvela, M. and Keihanen, E. and Keskitalo, R. and Kisner, T. S. and Kneissl, R. and Knoche, J. and Knox, L. and Kunz, M. and Kurki-Suonio, H. and Lagache, G. and Lahteenmaki, A. and Lamarre, J. -M. and Lasenby, A. and Lattanzi, M. and Lawrence, C. R. and Leahy, J. P. and Leonardi, R. and Lesgourgues, J. and Levrier, F. and Lewis, A. and Liguori, M. and Lilje, P. B. and Linden-Vornle, M. and Lopez-Caniego, M. and Lubin, P. M. and Macias-Perez, J. F. and Maggio, G. and Maino, D. and Mandolesi, N. and Mangilli, A. and Marchini, A. and Martin, P. G. and Martinelli, M. and Martinez-Gonzalez, E. and Masi, S. and Matarrese, S. and Mazzotta, P. and McGehee, P. and Meinhold, P. R. and Melchiorri, A. and Melin, J. -B. and Mendes, L. and Mennella, A. and Migliaccio, M. and Millea, M. and Mitra, S. and Miville-Deschenes, M. -A. and Moneti, A. and Montier, L. and Morgante, G. and Mortlock, D. and Moss, A. and Munshi, D. and Murphy, J. A. and Naselsky, P. and Nati, F. and Natoli, P. and Netterfield, C. B. and Norgaard-Nielsen, H. U. and Noviello, F. and Novikov, D. and Novikov, I. and Oxborrow, C. A. and Paci, F. and Pagano, L. and Pajot, F. and Paladini, R. and Paoletti, D. and Partridge, B. and Pasian, F. and Patanchon, G. and Pearson, T. J. and Perdereau, O. and Perotto, L. and Perrotta, F. and Pettorino, V. and Piacentini, F. and Piat, M. and Pierpaoli, E. and Pietrobon, D. and Plaszczynski, S. and Pointecouteau, E. and Polenta, G. and Popa, L. and Pratt, G. W. and Prezeau, G. and Prunet, S. and Puget, J. -L. and Rachen, J. P. and Reach, W. T. and Rebolo, R. and Reinecke, M. and Remazeilles, M. and Renault, C. and Renzi, A. and Ristorcelli, I. and Rocha, G. and Rosset, C. and Rossetti, M. and Roudier, G. and D'Orfeuil, B. Rouille and Rowan-Robinson, M. and Rubino-Martin, J. A. and Rusholme, B. and Said, N. and Salvatelli, V. and Salvati, L. and Sandri, M. and Santos, D. and Savelainen, M. and Savini, G. and Scott, D. and Seiffert, M. D. and Serra, P. and Shellard, E. P. S. and Spencer, L. D. and Spinelli, M. and Stolyarov, V. and Stompor, R. and Sudiwala, R. and Sunyaev, R. and Sutton, D. and Suur-Uski, A. -S. and Sygnet, J. -F. and Tauber, J. A. and Terenzi, L. and Toffolatti, L. and Tomasi, M. and Tristram, M. and Trombetti, T. and Tucci, M. and Tuovinen, J. and Turler, M. and Umana, G. and Valenziano, L. and Valiviita, J. and {Van Tent}, B. and Vielva, P. and Villa, F. and Wade, L. A. and Wandelt, B. D. and Wehus, I. K. and White, M. and White, S. D. M. and Wilkinson, A. and Yvon, D. and Zacchei, A. and Zonca, A.},
+doi = {10.1051/0004-6361/201525830},
+eprint = {1502.01589},
+file = {:C$\backslash$:/Users/Ian/Google Drive/33-466 Cosmology/project/references/1502.01589.pdf:pdf},
+isbn = {9780874216561},
+issn = {0004-6361},
+journal = {A{\&}A},
+month = {feb},
+pages = {A13},
+pmid = {15003161},
+title = {{Planck 2015 results. XIII. Cosmological parameters}},
+url = {http://arxiv.org/abs/1502.01589{\%}0Ahttp://dx.doi.org/10.1051/0004-6361/201525830 http://www.aanda.org/10.1051/0004-6361/201525830 http://arxiv.org/abs/1502.01589 http://dx.doi.org/10.1051/0004-6361/201525830},
+volume = {594},
+year = {2015}
 }
 @article{Dumet-Montoya2013,
 abstract = {The Navarro-Frenk-White (NFW) density profile is often used to model gravitational lenses. For low values of the characteristic convergence ({\$}\backslashkappa{\_}s \backslashll 1{\$}) of this model - corresponding to galaxy and galaxy group mass scales - a high numerical precision is required in order to accurately compute several quantities in the strong lensing regime. An alternative for fast and accurate computations is to derive analytic approximations in this limit. In this work we obtain analytic solutions for several lensing quantities for elliptical (ENFW) and pseudo-elliptical (PNFW) NFW lens models on the typical scales where gravitational arcs are expected to be formed, in the {\$}\backslashkappa{\_}s \backslashll 1{\$} limit, establishing their domain of validity. We derive analytic solutions for the convergence and shear for these models, obtaining explicit expressions for the iso-convergence contours and constant distortion curves (including the tangential critical curve). We also compute the deformation cross section, which is given in closed form for the circular NFW model and in terms of a one-dimensional integral for the elliptical ones. In addition, we provide a simple expression for the ellipticity of the iso-convergence contours of the pseudo-elliptical models and the connection of characteristic convergences among the PNFW and ENFW models. We conclude that the set of solutions derived here is generally accurate for {\$}\backslashkappa{\_}s \backslashlesssim 0.1{\$}. For low ellipticities, values up to {\$}\backslashkappa{\_}s \backslashsimeq 0.18{\$} are allowed. On the other hand, the mapping between PNFW and the ENFW models is valid up to {\$}\backslashkappa{\_}s \backslashsimeq 0.4{\$}. The solutions derived in this work can be used to speed up numerical codes and ensure their accuracy in the low {\$}\backslashkappa{\_}s{\$} regime, including applications to arc statistics and other strong lensing observables. (Abridged)},
