--- a/paper.tex
+++ b/paper.tex
@@ -123,9 +123,9 @@ The average surface density inside angular radius $\theta$ is derived using equa
 \end{equation}
 The tangential shear follows from equation \ref{tangentialshear}:
 \begin{equation}
-\gamma_\mathrm{CIS}(\theta) = \frac{\sigma^2 \left(\sqrt{\theta^2 + {\theta_c}^2} - \theta_c \right)}{\Sigma_\mathrm{crit} G D_L \theta^2} - \frac{\sigma^2}{2 \Sigma_\mathrm{crit} G D_L \sqrt{\theta^2 + {\theta_c}^2}}
+\gamma_\mathrm{CIS}(\theta) = \frac{\sigma^2}{\Sigma_\mathrm{crit} G D_L} \left(\frac{\sqrt{\theta^2 + {\theta_c}^2} - \theta_c}{\theta^2} - \frac{1}{2 \sqrt{\theta^2 + {\theta_c}^2}}\right)
 \end{equation}
-The ellipticity equations, while not quite elegant, are trivial to calculate from the shear.
+The ellipticity equation, while not quite elegant, is trivial to calculate using equation \ref{ellipticity}.
 
 Although the total mass of the CIS profile diverges, we will use a common convention for quantifying the mass of the profile within a reasonable radius. We define $r_{200}$ as the radius at which the average enclosed density of the profile is 200 times the critical density of the universe. The critical density $\rho_\mathrm{crit}$ depends on cosmological parameters such as the Hubble constant $H_0$. We choose to use the critical density at the current time $\rho_\mathrm{crit,0}$ for all halos regardless of their redshift. We assume a flat $\Lambda$CDM universe and use the Planck 2015 results for all cosmological calculations \citep{PlanckCollaboration2015}.
 
@@ -157,7 +157,8 @@ Figure \ref{cisproperties} shows the convergence, tangential shear, and elliptic
 
 
 \subsection{Navarro-Frenk-White (NFW) Profile}
-
+The NFW profile has had some success in describing dark matter halos is both simulations and observations, though
+\citep{Navarro1997}
 \begin{equation}
 \rho_\mathrm{NFW}(r) = \frac{\rho_\mathrm{crit} \delta_c}{(r/r_s)\left(1 + r/r_s\right)^2}
 \end{equation}
