Shortened author list of reference paper

--- a/paper.tex
+++ b/paper.tex
@@ -270,6 +270,17 @@ Estimating ellipticity has well-documented issues [cite] due to noise and PSF
 %How to properly do sigma contours?
 
 \section{Results}
+%\begin{figure}
+%    \centering
+%    \includegraphics{nfwfitparams.pdf}
+%    \label{}
+%\end{figure}
+
+%\begin{figure}
+%    \centering
+%    \includegraphics{isothermalfitparams.pdf}
+%    \label{}
+%\end{figure}
 
 \begin{figure}
     \centering
