--- a/references.bib
+++ b/references.bib
@@ -199,7 +199,7 @@ year = {2017}
 abstract = {We present results based on full-mission Planck observations of temperature and polarization anisotropies of the CMB. These data are consistent with the six-parameter inflationary LCDM cosmology. From the Planck temperature and lensing data, for this cosmology we find a Hubble constant, H0= (67.8 +/- 0.9) km/s/Mpc, a matter density parameter Omega{\_}m = 0.308 +/- 0.012 and a scalar spectral index with n{\_}s = 0.968 +/- 0.006. (We quote 68{\%} errors on measured parameters and 95{\%} limits on other parameters.) Combined with Planck temperature and lensing data, Planck LFI polarization measurements lead to a reionization optical depth of tau = 0.066 +/- 0.016. Combining Planck with other astrophysical data we find N{\_} eff = 3.15 +/- 0.23 for the effective number of relativistic degrees of freedom and the sum of neutrino masses is constrained to {\textless} 0.23 eV. Spatial curvature is found to be |Omega{\_}K| {\textless} 0.005. For LCDM we find a limit on the tensor-to-scalar ratio of r {\textless}0.11 consistent with the B-mode constraints from an analysis of BICEP2, Keck Array, and Planck (BKP) data. Adding the BKP data leads to a tighter constraint of r {\textless} 0.09. We find no evidence for isocurvature perturbations or cosmic defects. The equation of state of dark energy is constrained to w = -1.006 +/- 0.045. Standard big bang nucleosynthesis predictions for the Planck LCDM cosmology are in excellent agreement with observations. We investigate annihilating dark matter and deviations from standard recombination, finding no evidence for new physics. The Planck results for base LCDM are in agreement with BAO data and with the JLA SNe sample. However the amplitude of the fluctuations is found to be higher than inferred from rich cluster counts and weak gravitational lensing. Apart from these tensions, the base LCDM cosmology provides an excellent description of the Planck CMB observations and many other astrophysical data sets.},
 archivePrefix = {arXiv},
 arxivId = {1502.01589},
-author = {{Planck Collaboration}, Ade, P. A. R. et al.},
+author = {{Planck Collaboration} and Ade et al., P. A. R.},
 doi = {10.1051/0004-6361/201525830},
 eprint = {1502.01589},
 file = {:C$\backslash$:/Users/Ian/Google Drive/33-466 Cosmology/project/references/1502.01589.pdf:pdf},
