--- a/paper.tex
+++ b/paper.tex
@@ -109,6 +109,14 @@ From this expression, it can be seen that deflection is most significant in the 
 
 
 \subsection{Cored Isothermal Sphere Profile}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{isothermalproperties.pdf}
+    \caption{Lensing quantities for a CIS profile with $M_{200} = 10^{15} M_\odot$ and $r_c = 10$ kpc. $z_L = 0.3$ and $z_S = 1.0$.}
+    \label{cisproperties}
+\end{figure}
+
 The cored isothermal sphere (CIS) profile is related to the singular isothermal sphere (SIS) profile, which is often used to describe halos and other collapsed astrophysical objects because of its simple formulation. Unlike the singular isothermal sphere, the cored isothermal sphere does not have a density singularity at its center due to a finite core radius $r_c$. The CIS density profile is defined
 \begin{equation} \label{cisdensity}
 \rho_\mathrm{CIS}(r) = \frac{\sigma^2}{2\pi G (r^2 + {r_c}^2)},
@@ -130,7 +138,7 @@ The ellipticity equation, while not quite elegant, is trivial to calculate using
 Although the total mass of the CIS profile diverges, we will use a common convention for quantifying the mass of the profile within a reasonable radius. We define $r_{200}$ as the radius at which the average enclosed density of the profile is 200 times the critical density of the universe. The critical density $\rho_\mathrm{crit}$ depends on cosmological parameters such as the Hubble constant $H_0$. We choose to use the critical density at the current time $\rho_\mathrm{crit,0}$ for all halos regardless of their redshift. We assume a flat $\Lambda$CDM universe and use the Planck 2015 results for all cosmological calculations \citep{PlanckCollaboration2015}.
 
 We define $M_{200}$ as the total mass enclosed within $r_{200}$:
-\begin{equation}
+\begin{equation} \label{M200}
 M_{200} = 200 \rho_\mathrm{crit} \frac{4}{3} \pi {r_{200}}^3
 \end{equation}
 We also calculate $M_{200}$ specifically for a CIS profile by integrating equation \ref{cisdensity}:
@@ -146,78 +154,49 @@ We can now completely switch the CIS profile's dependence from $\sigma^2$ to $M_
 \sigma^2 = \frac{M_{200} G}{2 \left( r_{200} - r_c \arctan{\left(\frac{r_{200}}{r_c}\right)} \right)}
 \end{equation}
 
-Figure \ref{cisproperties} shows the convergence, tangential shear, and ellipticity of a Milky Way-sized halo lens at redshift 0.3 for lensed objects at redshift 1.
-
-\begin{figure}
-    \centering
-    \includegraphics[width=0.8\textwidth]{isothermalproperties.pdf}
-    \caption{Lensing quantities for a CIS profile with $M_{200} = 10^{15} M_\odot$ and $r_c = 10$ kpc. $z_L = 0.3$ and $z_S = 1.0$.}
-    \label{cisproperties}
-\end{figure}
+Figure \ref{cisproperties} shows the convergence, tangential shear, and ellipticity of a Milky Way-sized halo lens.
 
 
 \subsection{Navarro-Frenk-White (NFW) Profile}
-The NFW profile has had some success in describing dark matter halos in both simulations and observations, though
-\citep{Navarro1997}
-It is characterized by a scale radius $r_s$ and a dimensionless parameter $\delta_c$, sometimes called the characteristic overdensity \citep{Wright2000}.
+The NFW profile has had some success in describing dark matter halos in both simulations and observations \citep{Navarro1997}. It is characterized by a scale radius $r_s$ and a dimensionless parameter $\delta_c$, sometimes called the characteristic overdensity \citep{Wright2000}. It also depends on the critical density of the universe, which we evaluate at the current time, like before. The form of the NFW profile is:
 \begin{equation}
 \rho_\mathrm{NFW}(r) = \frac{\rho_\mathrm{crit} \delta_c}{(r/r_s)\left(1 + r/r_s\right)^2}
 \end{equation}
-
-%What redshift is $\rho_\mathrm{crit}$ evaluated at? - at halo redshift - can we use current time?
-
-% \begin{equation}\Sigma_\mathrm{NFW}(R) = \frac{2 \rho_\mathrm{crit} \delta_c r_s}{(R/r_s)^2 - 1} \left(1 - \frac{2}{\sqrt{(R/r_s)^2 - 1}}  \arctan\left(\sqrt{\frac{R/r_s - 1}{R/r_s + 1}} \right) \right)
-% \end{equation}
-%
-%
-% \begin{equation}\overline{\Sigma}_\mathrm{NFW}(R) = \frac{4 \rho_\mathrm{crit} \delta_c r_s}{(R/r_s)^2} \left(
-%     \frac{2}{\sqrt{(R/r_s)^2 - 1}} ~\arctan\left(\sqrt{\frac{R/r_s - 1}{R/r_s + 1}} \right) + \ln{\left(\frac{R/r_s}{2}\right)}
-% \right)
-% \end{equation}
-%
-% In terms of angles:
-
-\begin{equation}
+Applying equation \ref{sigma} and defining $\theta_c = r_c/D_L$, we get the projected surface density of the NFW profile:
+\begin{equation} \label{sigmanfw}
 \Sigma_\mathrm{NFW}(\theta) = \frac{2 \rho_\mathrm{crit} \delta_c D_L \theta_s}{(\theta/\theta_s)^2 - 1} \left(1 - \frac{2}{\sqrt{(\theta/\theta_s)^2 - 1}} \arctan\left(\sqrt{\frac{\theta/\theta_s - 1}{\theta/\theta_s + 1}} \right) \right)
 \end{equation}
+\citet{Wright2000} use a slightly different convention for the projected surface density of an NFW profile. Note that for $\theta < \theta_s$, the argument of the arctan function in equation \ref{sigmanfw} becomes imaginary. However, applying the identity $\arctan(i x) = i\ \mathrm{arctanh}(x)$ and dividing out the $i$ from the square root in the denominator results in the form of $\Sigma_\mathrm{NFW}$ suggested by Wright and Brainerd for when  $\theta < \theta_s$. Additionally, their $\theta = \theta_s$ case is just the limit of equation \ref{sigmanfw} when $\theta \rightarrow \theta_s$. We argue that all three cases presented are equivalent and therefore we only use one for simplicity. \citet{Bartelmann2001} also use our convention.
 
-\begin{equation}
+The average surface density of an NFW profile is:
+\begin{equation} \label{sigmabarnfw}
 \overline{\Sigma}_\mathrm{NFW}(\theta) = \frac{4 \rho_\mathrm{crit} \delta_c D_L \theta_s}{(\theta/\theta_s)^2} \left(
     \frac{2}{\sqrt{(\theta/\theta_s)^2 - 1}} ~\arctan\left(\sqrt{\frac{\theta/\theta_s - 1}{\theta/\theta_s + 1}} \right) + \ln{\left(\frac{\theta/\theta_s}{2}\right)}
 \right)
 \end{equation}
 
-Similar convention used by \citet{Bartelmann2001}
+The equations for tangential shear and ellipticity of an NFW profile are very cumbersome but follow trivially from equations \ref{tangentialshear}, \ref{ellipticity}, \ref{sigmanfw}, and \ref{sigmabarnfw}.
 
-\begin{equation}
-\gamma_\mathrm{NFW}(\theta) = \frac{\overline{\Sigma}_\mathrm{NFW}(\theta) - \Sigma_\mathrm{NFW}(\theta)}{\Sigma_\mathrm{crit}}
+Like the CIS profile, we would like to switch dependence to $M_{200}$ and the concentration parameter $c$ from $r_s$ and $\delta_c$. The concentration parameter $c$ is defined as the ratio of $r_{200}$ to the scale radius $r_s$:
+\begin{equation} \label{concentration}
+c = \frac{r_{200}}{r_s}
 \end{equation}
-
-We can calculate ellipticities from tangential shear.
-
-We switch the dependence to $M_{200}$ and $c$ with:
-
+By integrating the NFW density profile spherically out to radius $r_{200}$, we get the form of $M_{200}$:
+\begin{equation} \label{nfwM200}
+M_{200} = M_\mathrm{enc}(r_{200}) = 4 \pi \rho_\mathrm{crit} \delta_c {r_s}^3 \left( \frac{1}{1 + r_{200}/r_s} + \ln{\left(1 + \frac{r_{200}}{r_s} \right)} - 1 \right)
+\end{equation}
+Setting this equal to the definition of $M_{200}$ in equation \ref{M200}, substituting $c$ for $r_{200}$ using equation \ref{concentration}, and solving for $\delta_c$ gives:
 \begin{equation}
 \delta_c = \frac{200}{3} \frac{c^3}{\ln(1 + c) - c/(1 + c)}
 \end{equation}
-\begin{equation}
-r_s = \frac{r_{200}}{c}
-\end{equation}
-\begin{equation}
-r_{200} = \left( \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit}} \right)^{1/3}
-\end{equation}
-\begin{equation}
-c = \frac{r_{200}}{r_s}
-\end{equation}
+$r_s$ can be eliminated with equations \ref{concentration} and \ref{M200}. Figure \ref{nfwproperties} shows the convergence, tangential shear, and ellipticity of a typical Milky Way-sized NFW halo lens.
 
 \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{nfwproperties.pdf}
-    \caption{Lensing quantities for a NFW profile with $M_{200} = 10^{15} M_\odot$ and $c = 10$.}
-    \label{}
+    \caption{Lensing quantities for a NFW profile with $M_{200} = 10^{15} M_\odot$ and $c = 10$. Also,  $z_L = 0.3$ and $z_S = 1.0$.}
+    \label{nfwproperties}
 \end{figure}
-
-
 
 
 \section{Methods}
